# pokemon-showdown-bot

./: .gitignore  INSTALL.md  README.md  battle_feedback.txt  battle_runner.py  competitive_player.py  config.py  credentials.py  current_team.txt  feedback_iteration_1.txt  gen1_calc.py  gen1_data.py  gen1_engine.py  gen1_ou_data.json  live_challenge.py  llm_bridge.py  main.py  pokemon.py  rust_engine_bridge.py  team_generator.py  team_iteration_1.txt  team_iteration_2.txt  test_battle.py
archive/: gen1_data.py  llm_bridge.py  showdown.py
gen1_engine_rs/: Cargo.toml  README.md
gen1_engine_rs/src/: calc.rs  data.rs  eval.rs  ids.rs  inference.rs  main.rs  mcts.rs  minimax.rs  sim.rs  state.rs
