[package]
name = "gen1_engine_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gen1_engine_rs"
path = "src/main.rs"

[dependencies]
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
rand        = "0.8"
rayon       = "1.8"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
panic         = "abort"